Removed some placeholders in composer.json
Removed name and description placeholders

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "{{ project_name }}",
-    "description": "{{ project_description }}",
+    "name": "",
+    "description": "",
     "authors": [],
 
     "repositories": [
