--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+syntax: glob
 .vagrant
-wp
-vendor
+.sass-cache
+.idea
+
 modules
+node_modules
+bower_components
+
+public/wp
+public/content/languages
+public/content/plugins
+public/content/uploads
+
+*.sql
+*.orig
+
+
+syntax: regexp
+^vendor$
