Update .env.example file with new setup

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
-APP_ENV=development
+APP_ENV=local
 APP_DEBUG=true
 
+DB_HOST=localhost
 DB_NAME=wordpress_dev
 DB_USER=root
 DB_PASSWORD=root
-DB_HOST=localhost
+
+AUTH_KEY=put_key_here
+SECURE_AUTH_KEY=put_key_here
+LOGGED_IN_KEY=put_key_here
+NONCE_KEY=put_key_here
+AUTH_SALT=put_key_here
+SECURE_AUTH_SALT=put_key_here
+LOGGED_IN_SALT=put_key_here
+NONCE_SALT=put_key_here
