--- a/public/.htaccess
+++ b/public/.htaccess
@@ -186,7 +186,7 @@ AddDefaultCharset utf-8
 
 
 # Block access to all hidden files and directories with the exception of the
-# visible content from within the `/.well-known/` hidden directory
+# visible app from within the `/.well-known/` hidden directory
 
 <IfModule mod_rewrite.c>
     RewriteCond %{REQUEST_URI} "!(^|/)\.well-known/([^./]+./?)+$" [NC]
@@ -250,30 +250,28 @@ AddDefaultCharset utf-8
 
     # Compress all output labeled with one of the following media types.
 
-    <IfModule mod_filter.c>
-        AddOutputFilterByType DEFLATE "application/atom+xml" \
-                                      "application/javascript" \
-                                      "application/json" \
-                                      "application/ld+json" \
-                                      "application/manifest+json" \
-                                      "application/rss+xml" \
-                                      "application/vnd.geo+json" \
-                                      "application/vnd.ms-fontobject" \
-                                      "application/x-font-ttf" \
-                                      "application/x-web-app-manifest+json" \
-                                      "application/xhtml+xml" \
-                                      "application/xml" \
-                                      "font/opentype" \
-                                      "image/svg+xml" \
-                                      "image/x-icon" \
-                                      "text/cache-manifest" \
-                                      "text/css" \
-                                      "text/html" \
-                                      "text/plain" \
-                                      "text/vtt" \
-                                      "text/x-component" \
-                                      "text/xml"
-    </IfModule>
+    AddOutputFilterByType DEFLATE "application/atom+xml" \
+                                  "application/javascript" \
+                                  "application/json" \
+                                  "application/ld+json" \
+                                  "application/manifest+json" \
+                                  "application/rss+xml" \
+                                  "application/vnd.geo+json" \
+                                  "application/vnd.ms-fontobject" \
+                                  "application/x-font-ttf" \
+                                  "application/x-web-app-manifest+json" \
+                                  "application/xhtml+xml" \
+                                  "application/xml" \
+                                  "font/opentype" \
+                                  "image/svg+xml" \
+                                  "image/x-icon" \
+                                  "text/cache-manifest" \
+                                  "text/css" \
+                                  "text/html" \
+                                  "text/plain" \
+                                  "text/vtt" \
+                                  "text/x-component" \
+                                  "text/xml"
 
 </IfModule>
 
