--- a/composer.json
+++ b/composer.json
@@ -35,19 +35,14 @@
     "require": {
         "php": ">=5.4",
         "wordpress": "{{ wordpress_version }}",
-        "fancyguy/webroot-installer": "*",
-        "composer/installers": "*",
-        "vlucas/phpdotenv": "*",
-        "wpackagist-plugin/better-wp-security": "*",
-        "wpackagist-plugin/wp-super-cache": "*",
-        "wpackagist-plugin/twigpress": "*",
-        "wpackagist-plugin/wordpress-seo": "*",
-        "wpackagist-plugin/regenerate-thumbnails": "*"
+        "fancyguy/webroot-installer": "^1.0",
+        "composer/installers": "^1.0",
+        "vlucas/phpdotenv": "^2.0"
     },
 
     "require-dev": {
-        "filp/whoops": "*",
-        "symfony/var-dumper": "*"
+        "filp/whoops": "^1.1",
+        "symfony/var-dumper": "^2.7"
     },
 
     "autoload": {
